--- a/Inheritance Assignment/Inheritance Assignment.csproj
+++ b/Inheritance Assignment/Inheritance Assignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{57B3C95D-0B95-4156-A7DF-907E324D98C7}</ProjectGuid>
+    <ProjectGuid>{DE53CF20-CF9A-4291-BC26-09803B407A7C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Classes_and_Objects</RootNamespace>
-    <AssemblyName>Classes and Objects</AssemblyName>
+    <RootNamespace>Inheritance_Assignment</RootNamespace>
+    <AssemblyName>Inheritance Assignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,12 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwentyOneGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
