--- a/Abstract Classes Assignment/Abstract Classes Assignment.csproj
+++ b/Abstract Classes Assignment/Abstract Classes Assignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{57B3C95D-0B95-4156-A7DF-907E324D98C7}</ProjectGuid>
+    <ProjectGuid>{CCA53A08-A28E-4771-A9D7-CFC49D16DCF2}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Classes_and_Objects</RootNamespace>
-    <AssemblyName>Classes and Objects</AssemblyName>
+    <RootNamespace>Abstract_Classes_Assignment</RootNamespace>
+    <AssemblyName>Abstract Classes Assignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,14 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Dealer.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwentyOneGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
